[package]
name = "pbf_history_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbf = "0.3.0"
strum = "0.24"
strum_macros = "0.24"
chrono = "0.4.24"
postgres = {version = "0.19.5", features = ["array-impls", "with-chrono-0_4"]}
itertools = "0.10.5"
